Fixed contrasting section
To create a contrasting section now, create a div with the class 'contrasting-section' and then put the <p> (or other elements) into it.

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -143,6 +143,16 @@ a:active {
   color: $mainColor;
   padding: 25px 10%;
   margin: auto 0px;
+  @include bp(tablet) {
+    padding: 25px 30px;
+  }
+  @include bp(phone) {
+    padding: 25px 20px;
+    font-size: 16px;
+  }
+  p {
+    margin: auto;
+  }
 }
 
 // Footer
